--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
 </head>
 <h1>About Me</h1>
 <body>
-
+<div class="row">
+    <div class="col-sm-8">
+        <p>Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested in
+            technology. I am currently a freshman at NJIT, pursuing a major in Business and Information Systems.
+        </p>
+    </div>
+</div>
 </body>
 </html>
