--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>The Portfolio of Darshan Patel</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
 </head>
 
 
