--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,8 +18,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="aboutMe.html">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
+            <li><a href="informationPage.html">Page 2</a></li>
         </ul>
     </div>
 </nav>
