--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,9 +16,9 @@
             <a class="navbar-brand" href="index.html">Intro to Website Development</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="aboutMe.html">Page 1</a></li>
-            <li><a href="informationPage.html">Page 2</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
+            <li><a href="informationPage.html">Information Page</a></li>
         </ul>
     </div>
 </nav>
