--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -9,6 +9,19 @@
 </head>
 <h1>About Me</h1>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">Intro to Website Development</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
+            <li><a href="informationPage.html">Information Page</a></li>
+        </ul>
+    </div>
+</nav>
+
 <div class="row">
     <div class="col-sm-8">
         <p>Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested in
