--- a/HTML/informationPage.html
+++ b/HTML/informationPage.html
@@ -8,6 +8,17 @@
 
 </head>
 <body>
-
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">Intro to Website Development</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
+            <li><a href="informationPage.html">Information Page</a></li>
+        </ul>
+    </div>
+</nav>
 </body>
 </html>
