--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -7,7 +7,7 @@
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 </head>
-<h1>About Me</h1>
+
 <body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -21,11 +21,11 @@
         </ul>
     </div>
 </nav>
-
+<h1>About Me</h1>
 <div class="row">
     <div class="col-sm-8">
-        <p>Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested in
-            technology. I am currently a freshman at NJIT, pursuing a major in Business and Information Systems.
+        <p id="Intro">Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested
+            in technology. I am currently a freshman at NJIT, pursuing a major in Business and Information Systems.
         </p>
     </div>
 </div>
