--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -9,23 +9,27 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-md
+     justify-content-start bg-dark navbar-dark col-12">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="index.html">Intro to Website Development</a>
         </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="aboutMe.html">About Me</a></li>
-            <li><a href="informationPage.html">Information Page</a></li>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="aboutMe.html" class="nav-link">About Me</a></li>
+            <li class="nav-item"><a href="informationPage.html" class="nav-link">Information Page</a></li>
         </ul>
     </div>
 </nav>
+
 <h1>About Me</h1>
 <div class="row">
     <div class="col-sm-8">
         <p id="Intro">Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested
-            in technology. I am currently a freshman at NJIT, pursuing a major in Business and Information Systems.
+            in technology as a kid. I am currently a freshman at NJIT, pursuing a major in Business and Information
+            Systems. Before NJIT I messed around with some coding languages and fan videos to keep my interests. Once
+            starting school here, I have been in love with the coding world and the variety of applications.
         </p>
     </div>
 </div>
