--- a/HTML/informationPage.html
+++ b/HTML/informationPage.html
@@ -8,17 +8,19 @@
 
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-md
+     justify-content-start bg-dark navbar-dark col-12">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="index.html">Intro to Website Development</a>
         </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="aboutMe.html">About Me</a></li>
-            <li><a href="informationPage.html">Information Page</a></li>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="aboutMe.html" class="nav-link">About Me</a></li>
+            <li class="nav-item"><a href="informationPage.html" class="nav-link">Information Page</a></li>
         </ul>
     </div>
 </nav>
+
 </body>
 </html>
