fix: added to aboutMe.html, fixed text

--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -29,7 +29,7 @@
         <p id="Intro">Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested
             in technology as a kid. I am currently a freshman at NJIT, pursuing a major in Business and Information
             Systems. Before NJIT I messed around with some coding languages and fan videos to keep my interests. Once
-            starting school here, I have been in love with the coding world and the variety of applications.
+            starting school here, I have been in love with the coding world and the variety of applications it has.
         </p>
     </div>
 </div>
