--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,6 +21,11 @@
             <li class="nav-item"><a href="aboutMe.html" class="nav-link">About Me</a></li>
             <li class="nav-item"><a href="informationPage.html" class="nav-link">Information Page</a></li>
         </ul>
+        <form>
+            <input type="text" placeholder="Look up...">
+            <button type="submit">Search</button>
+        </form>
+        
     </div>
 </nav>
 
