--- a/HTML/informationPage.html
+++ b/HTML/informationPage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Course Information</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+          crossorigin="anonymous">
 
 </head>
 <body>
@@ -28,4 +29,30 @@
 </nav>
 
 </body>
+
+<h1>Course: HTML</h1>
+<h2>Taught By: Professor Keith Williams</h2>
+<h3>What I learned</h3>
+
+<p>
+    There is a lot to learn for HTML and since this was only an introductory course, we have touched the surface of
+    unlimited possibilities</p>
+<br>
+<p>
+    The major topics and skills Professor Williams emphasized were:
+</p>
+
+<ol>
+
+    <li> How to properly collaborate using Github and Git</li>
+    <li> How to link upto AFS</li>
+    <li> Basic computer terminology and website formats</li>
+</ol>
+<h4>What is Git and Github?</h4>
+<p>Git is version control system for tracking changes in a source code for software development. Github is a web-based
+    hosting service for version control using GIT. It gives you distributed version control and source code management
+    functionality of GIT.</p>
+<h4>How to properly collaborate using Github and Git</h4>
+Now that we know what Git and Github are, how do we use this to help develop websites. Once you work in the coporate
+world many people will be working on one project. So to share each others work and changes, Git and Github are needed.
 </html>
