feature: added images and carousel to index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,13 @@
         </form>
 
     </div>
+
 </nav>
+
+<div class="col-sm-3 fling-minislide">
+    <img src="../img/photo1.png" alt="HTML Logo"/>
+    <img src="../img/photo2.jpg" alt="Example of Z Layout"/>
+</div>
 
 
 </body>
