--- a/HTML/informationPage.html
+++ b/HTML/informationPage.html
@@ -53,6 +53,6 @@
     hosting service for version control using GIT. It gives you distributed version control and source code management
     functionality of GIT.</p>
 <h4>How to properly collaborate using Github and Git</h4>
-Now that we know what Git and Github are, how do we use this to help develop websites. Once you work in the coporate
+Now that we know what Git and Github are, how do we use this to help develop websites. Once you work in the corporate
 world many people will be working on one project. So to share each others work and changes, Git and Github are needed.
 </html>
