--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,25 @@
 
 <div class="col-sm-3 fling-minislide">
     <img src="../img/photo1.png" alt="HTML Logo"/>
-    <img src="../img/photo2.jpg" alt="Example of Z Layout"/>
+    <img src="../img/photo4.png" alt="CSS Logo"/>
+    <img src="../img/photo3.jpg" alt="Example of Z Layout"/>
+    <img src="../img/photo4.png" alt="Example of F Layout"/>
+</div>
+
+<div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-3">
+        <h3>What is HTML?</h3>
+        <p></p>
+    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-3">
+        <h3>Where can you learn?</h3>
+    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-3">
+        <h3>Why Learn HTML?</h3>
+    </div>
 </div>
 
 
