--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet"/>
 
 </head>
@@ -18,12 +18,12 @@
             <a class="navbar-brand" href="index.html">Intro to Website Development</a>
         </div>
         <ul class="navbar-nav">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="aboutMe.html" class="nav-link">About Me</a></li>
-            <li class="nav-item"><a href="informationPage.html" class="nav-link">Information Page</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutMe.html">About Me</a></li>
+            <li class="nav-item"><a class="nav-link" href="informationPage.html">Information Page</a></li>
         </ul>
         <form>
-            <input type="text" placeholder="Look up...">
+            <input placeholder="Look up..." type="text">
             <button type="submit">Search</button>
         </form>
 
@@ -32,25 +32,35 @@
 </nav>
 
 <div class="col-sm-3 fling-minislide">
-    <img src="../img/photo1.png" alt="HTML Logo"/>
-    <img src="../img/photo4.png" alt="CSS Logo"/>
-    <img src="../img/photo3.jpg" alt="Example of Z Layout"/>
-    <img src="../img/photo4.png" alt="Example of F Layout"/>
+    <img alt="HTML Logo" src="../img/photo1.png"/>
+    <img alt="CSS Logo" src="../img/photo4.png"/>
+    <img alt="Example of Z Layout" src="../img/photo3.jpg"/>
+    <img alt="Example of F Layout" src="../img/photo4.png"/>
 </div>
 
 <div class="row">
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
         <h3>What is HTML?</h3>
-        <p></p>
+        <p>HTML is a Hyper Text Markup Language. HTML is the standard markup language for Web pages. The element in HTML
+            are the building blocks of HTML pages. It is also the standard for creating web applications. With the use
+            of JavaScript(JS) and Cascading Style Sheets(CSS). The elements are represented by <>tags. </p>
     </div>
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
         <h3>Where can you learn?</h3>
+        <p>With the internet being so accessible to people all over the world, learning can be done anywhere anytime.
+            There are many online teachers and websites to help you get started. Some of the best websites are to learn
+            are Codecademy and W3schools.</p>
     </div>
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
         <h3>Why Learn HTML?</h3>
+        <p>There are so many reasons why one should learn HTML with CSS and JavaScript. HTML and CSS are the basic
+            programming languages for web development and design. This is not only beneficial for developers but
+            marketers too. With HTML you can use it for formatting a blog or email. The advantages of learning HTML are
+            limitless, both creativity and career wise. You have the ability to make a lot of money while having a
+            relaxed life. </p>
     </div>
 </div>
 
