feature: created links for Codecademey and W3schools

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,7 +51,9 @@
         <h3>Where can you learn?</h3>
         <p>With the internet being so accessible to people all over the world, learning can be done anywhere anytime.
             There are many online teachers and websites to help you get started. Some of the best websites are to learn
-            are Codecademy and W3schools.</p>
+            are <a href="https://www.w3schools.com/">W3schools.com</a> and <a href="https://www.codecademy.com/learn">Codecademy.com</a>.
+
+        </p>
     </div>
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
