fix: text edited properly

--- a/HTML/informationPage.html
+++ b/HTML/informationPage.html
@@ -64,12 +64,12 @@
 
 <h4>How to link upto AFS</h4>
 1.Go to tools, Start SSH session, edit credentials.
+<img alt="AFS 1" src="../img/AFSlogging1.PNG"/>
 
-![alt text](img/AFSlogging1.PNG)
 
 2. In the following window,
 
-![alt text](img/AFSLogging2.PNG)
+<img alt="AFS 2" src="../img/AFSLogging2.PNG"/>
 
 Enter the following,
 * Host: afs(any number between 1-22).njit.edu
@@ -79,15 +79,13 @@ Enter the following,
 
 3. The following terminal window shows after successfully logging into AFS,
 
-![alt text](img/AFSLogging3.PNG)
-
+<img alt="AFS 3" src="../img/AFSLogging3.PNG"/>
 
 ### Deployment
 used to have files of a website locally and linked to a website remote
 
 1. Go to tools, Deployment, and select configuration, click on the + tab, name host, select SFTP
-
-
+<img alt="AFS 4" src="../img/AFSLogging4.PNG"/>
 
 Enter the following,
 * Host: afs(any number between 1-22).njit.edu
@@ -98,20 +96,24 @@ Enter the following,
 * Webserver URL should read: http://web.njit.edu/~ucid
 
 2. In the deployment window select Mappings and add / in the Deployment path
-
-![alt text](img/AFSLogging5.PNG)
+<img alt="AFS 5" src="../img/AFSLogging5.PNG"/>
 
 3. Add a .gitignore file to your project, and include .idea inside the file, and commit
-![alt text](img/AFSLogging6.PNG)
+<img alt="AFS 6" src="../img/AFSLogging6.PNG"/>
 
 4. Select Tools, Deployment, Automatic upload
 
 5. Tools, Deployment, Browse Remote Host. The remote host w/ files will appear on the upper right side of your screen.
-![alt text](img/AFSLogging7.PNG)
+<img alt="AFS 7" src="../img/AFSLogging7.PNG"/>
 
 6. Scroll over to the location of your remote host afs files (in step 5), and right click on the index.html file.
 Select the download from here option. Commit now.
 
 7. Select VCS, import into Version Control, select share project on Github, press ok.
+
+<h4>Website Layouts</h4>
+<p>The main two website layouts we learned this year were the Z and F layout. Z layouts are mainly used for homepages
+    and F layouts are mainly used for content pages.</p>
+
 
 </html>
