feature: id given to all AFS images

--- a/HTML/informationPage.html
+++ b/HTML/informationPage.html
@@ -64,12 +64,12 @@
 
 <h4>How to link upto AFS</h4>
 1.Go to tools, Start SSH session, edit credentials.
-<img alt="AFS 1" src="../img/AFSlogging1.PNG"/>
+<img alt="AFS 1" src="../img/AFSlogging1.PNG" id="AFS1"/>
 
 
 2. In the following window,
 
-<img alt="AFS 2" src="../img/AFSLogging2.PNG"/>
+<img alt="AFS 2" src="../img/AFSLogging2.PNG" id="AFS2"/>
 
 Enter the following,
 * Host: afs(any number between 1-22).njit.edu
@@ -79,13 +79,13 @@ Enter the following,
 
 3. The following terminal window shows after successfully logging into AFS,
 
-<img alt="AFS 3" src="../img/AFSLogging3.PNG"/>
+<img alt="AFS 3" src="../img/AFSLogging3.PNG" id="AFS3"/>
 
 ### Deployment
 used to have files of a website locally and linked to a website remote
 
 1. Go to tools, Deployment, and select configuration, click on the + tab, name host, select SFTP
-<img alt="AFS 4" src="../img/AFSLogging4.PNG"/>
+<img alt="AFS 4" src="../img/AFSLogging4.PNG" id="AFS4"/>
 
 Enter the following,
 * Host: afs(any number between 1-22).njit.edu
@@ -96,15 +96,15 @@ Enter the following,
 * Webserver URL should read: http://web.njit.edu/~ucid
 
 2. In the deployment window select Mappings and add / in the Deployment path
-<img alt="AFS 5" src="../img/AFSLogging5.PNG"/>
+<img alt="AFS 5" src="../img/AFSLogging5.PNG" id="AFS5"/>
 
 3. Add a .gitignore file to your project, and include .idea inside the file, and commit
-<img alt="AFS 6" src="../img/AFSLogging6.PNG"/>
+<img alt="AFS 6" src="../img/AFSLogging6.PNG" id="AFS6"/>
 
 4. Select Tools, Deployment, Automatic upload
 
 5. Tools, Deployment, Browse Remote Host. The remote host w/ files will appear on the upper right side of your screen.
-<img alt="AFS 7" src="../img/AFSLogging7.PNG"/>
+<img alt="AFS 7" src="../img/AFSLogging7.PNG" id="AFS7"/>
 
 6. Scroll over to the location of your remote host afs files (in step 5), and right click on the index.html file.
 Select the download from here option. Commit now.
