--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -5,6 +5,7 @@
     <title>About Me</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="../css/main.css" rel="stylesheet"/>
 
 </head>
 
