fix: a lot of texts and css stuff. deleted images

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,11 +31,15 @@
 
 </nav>
 
-<div class="col-sm-3 fling-minislide">
-    <img alt="HTML Logo" src="../img/photo1.png"/>
-    <img alt="CSS Logo" src="../img/photo4.png"/>
-    <img alt="Example of Z Layout" src="../img/photo3.jpg"/>
-    <img alt="Example of F Layout" src="../img/photo4.png"/>
+<br>
+<div class="row" id="slide">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4 fling-minislide">
+        <img alt="HTML Logo" src="../img/photo1.png"/>
+        <img alt="CSS Logo" src="../img/photo4.png"/>
+        <img alt="Example of Z Layout" src="../img/photo3.jpg"/>
+        <img alt="Example of F Layout" src="../img/photo4.png"/>
+    </div>
 </div>
 
 <div class="row">
@@ -58,8 +62,8 @@
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
         <h3>Why Learn HTML?</h3>
-        <p>There are so many reasons why one should learn HTML with CSS and JavaScript. HTML and CSS are the basic
-            programming languages for web development and design. This is not only beneficial for developers but
+        <p id="learn"> There are so many reasons why one should learn HTML with CSS and JavaScript. HTML and CSS are the
+            basic programming languages for web development and design. This is not only beneficial for developers but
             marketers too. With HTML you can use it for formatting a blog or email. The advantages of learning HTML are
             limitless, both creativity and career wise. You have the ability to make a lot of money while having a
             relaxed life. </p>
