--- a/HTML/aboutMe.html
+++ b/HTML/aboutMe.html
@@ -29,7 +29,7 @@
     </div>
 </nav>
 
-<h1>About Me</h1>
+<h1 id="aboutme">About Me</h1>
 <div class="row">
     <div class="col-sm-8">
         <p id="Intro">Hello, my name is Darshan Patel. I was born and raised in Freehold, NJ and was always interested
